fix overflow hidden for body

--- a/scss/home.scss
+++ b/scss/home.scss
@@ -2,8 +2,6 @@ html {
   height: 100%;
   body {
     height: 100%;
-    overflow:hidden;
-
     .wrapper{
       position:relative;
       width:100%;
